# sundries-python

./: README.md  pyproject.toml
script1/: README.md  main.py
script1/services/: constants.py  text_extractor_service.py
