[tool.poetry]
package-mode = false
name = "sundries-python"
version = "0.1.0"
description = "Some sundry scripts in Python"
authors = ["moliinyk maks.oliynik228@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.11"
beautifulsoup4 = "^4.14.2"
pypdf = "^6.1.3"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"